--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
     --grid-unit: min(var(--dvh) * 95 / 900, var(--dvw) * 95 * 9 / 13 / 900);
 }
 body {
-    width: calc(var(--dvw) * 100);
-    height: calc(var(--dvh) * 100);
+    width: 100%;
+    height: 100%;
     margin: 0;
     overflow: hidden;
 }
